@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <otrs_config version="1.0" init="Application">
-    <CVS>$Id: Ticket.xml,v 1.498 2012/01/25 07:33:15 ep Exp $</CVS>
+    <CVS>$Id: Ticket.xml,v 1.500 2012/02/14 08:59:22 mg Exp $</CVS>
     <ConfigItem Name="Ticket::Hook" Required="1" Valid="1">
         <Description Translatable="1">The identifier for a ticket, e.g. Ticket#, Call#, MyTicket#. The default is Ticket#.</Description>
         <Group>Ticket</Group>
@@ -4226,7 +4226,7 @@ $QData{"Body"}
             <Hash>
                 <Item Key="Module">Kernel::Output::HTML::TicketMenuGeneric</Item>
                 <Item Key="Name">History</Item>
-                <Item Key="Description" Translatable="1">Shows the ticket history</Item>
+                <Item Key="Description" Translatable="1">Show the ticket history</Item>
                 <Item Key="Action">AgentTicketHistory</Item>
                 <Item Key="Link">Action=AgentTicketHistory;TicketID=$QData{"TicketID"}</Item>
                 <Item Key="Target"></Item>
@@ -4495,7 +4495,7 @@ $QData{"Body"}
                 <Item Key="Module">Kernel::Output::HTML::TicketMenuGeneric</Item>
                 <Item Key="Name">History</Item>
                 <Item Key="Action">AgentTicketHistory</Item>
-                <Item Key="Description" Translatable="1">Shows the ticket history!</Item>
+                <Item Key="Description" Translatable="1">Show the ticket history</Item>
                 <Item Key="Link">Action=AgentTicketHistory;TicketID=$QData{"TicketID"}</Item>
                 <Item Key="Target"></Item>
                 <Item Key="PopupType">TicketHistory</Item>
@@ -4511,7 +4511,7 @@ $QData{"Body"}
                 <Item Key="Module">Kernel::Output::HTML::TicketMenuGeneric</Item>
                 <Item Key="Name">Priority</Item>
                 <Item Key="Action">AgentTicketPriority</Item>
-                <Item Key="Description" Translatable="1">Change the ticket priority!</Item>
+                <Item Key="Description" Translatable="1">Change the priority for this ticket</Item>
                 <Item Key="Link">Action=AgentTicketPriority;TicketID=$QData{"TicketID"}</Item>
                 <Item Key="Target"></Item>
                 <Item Key="PopupType">TicketAction</Item>
@@ -5768,7 +5768,7 @@ $QData{"Body"}
                     <NavBar>Ticket</NavBar>
                     <Type></Type>
                     <Block></Block>
-                    <AccessKey>e</AccessKey>
+                    <AccessKey>m</AccessKey>
                     <Prio>210</Prio>
                 </NavBar>
                 <Loader>
